# cpp-mock-tryouts

./: CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
application/inc/: SmurfImpl.hpp
application/inc/smurf/: Crew.hpp  Smurf.hpp  SmurfActions.hpp
application/src/: Crew.cpp  Smurf.cpp  SmurfActions.cpp  SmurfImpl.cpp
cppumock/: CMakeLists.txt  UnitTest1.cpp
inc/: App.hpp
src/: App.cpp  Smurf.cpp  SmurfImpl.cpp
